--- a/assets/css/demo.css
+++ b/assets/css/demo.css
@@ -31,3 +31,14 @@ main h1 {
 	padding-bottom: 10px;
 	border-bottom: 1px solid #eee;
 }
+
+main form {
+	padding-bottom: 12px;
+	margin-bottom: 20px;
+	border-bottom: 1px solid #ddd;
+}
+
+main form textarea {
+	width: 100%;
+	border: 1px solid #ddd;
+}
