--- a/assets/css/demo.css
+++ b/assets/css/demo.css
@@ -42,3 +42,9 @@ main form textarea {
 	width: 100%;
 	border: 1px solid #ddd;
 }
+
+main footer {
+	margin-top: 12px;
+	padding-top: 6px;
+	border-top: 1px solid #ddd;
+}
